syntax = "proto3";

import "auth/user_token.proto";  // Ensure the path is correct for the user_token.proto import
import "e_commerce/product.proto";  // Ensure the path is correct for the product.proto import

package inventory;

service InventoryService {
    rpc AddProductQuantity(AddProductQuantityRequest) returns (AddProductQuantityResponse);
    rpc FindAllInventoryForm(FindAllInventoryFormRequest) returns (FindAllInventoryFormResponse);
    rpc UpdateInventoryForm(UpdateInventoryFormRequest) returns (UpdateInventoryFormResponse);
    rpc DeleteInventoryForm(DeleteInventoryFormRequest) returns (DeleteInventoryFormResponse);
}

message TransactionProduct {
    string product_id = 1;
    int32 quantity = 2;
}

message InventoryFormResponse {
    string id = 1;
    string description = 2;
    string domain = 3;
    string type = 4;
    repeated TransactionProduct products = 5;
    string created_at = 6;
}

message AddProductQuantityRequest {
    userToken.User user = 1;
    string description = 2;
    repeated TransactionProduct products = 3;
    string type = 4;
}

message AddProductQuantityResponse {
    string id = 1;
    string description = 2;
    repeated TransactionProduct products = 3;
    string type = 4;
    string domain = 5;
    string created_at = 6;
}

message FindAllInventoryFormRequest {
    userToken.User user = 1;
    string type = 2;
}

message FindAllInventoryFormResponse {
    repeated InventoryFormResponse inventoryForm = 1;
}

message UpdateInventoryFormRequest {
    userToken.User user = 1;
    string id = 2;
    string description = 3;
    repeated TransactionProduct products = 4;
}

message UpdateInventoryFormResponse {
    string id = 1;
    string description = 2;
    repeated TransactionProduct products = 3;
    string type = 4;
    string domain = 5;
    string created_at = 6;
}

message DeleteInventoryFormRequest {
    userToken.User user = 1;
    string id = 2;
}

message DeleteInventoryFormResponse {
    string id = 1;
    string description = 2;
    repeated TransactionProduct products = 3;
    string type = 4;
    string domain = 5;
    string created_at = 6;
}